<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/routeConstantTextView"
        style="@style/CustomPrimaryTextView."
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/departmentInfoTitleHeight"
        android:textSize="@dimen/largeSize"
        android:text="@string/route"
        android:layout_marginTop="@dimen/routeTitleMarginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/cancelConstantTextView"
        style="@style/CustomDepartmentInfoDataTextView."
        android:layout_width="wrap_content"
        android:layout_height="@dimen/departmentInfoTitleHeight"
        android:layout_marginRight="@dimen/departmentInfoMarginLeftRight"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/specialActionElementsColor"
        android:textSize="@dimen/t2"
        app:layout_constraintBottom_toBottomOf="@+id/routeConstantTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/routeConstantTextView"
        />

    <ImageView
        android:id="@+id/lineRouteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line_ico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/routeConstantTextView"/>

    <ImageButton
        android:id="@+id/cancelRouteImageButton"
        android:layout_width="@dimen/heightOfSearchEditText"
        android:layout_height="@dimen/heightOfSearchEditText"
        android:background="@drawable/rounded_button"
        android:src="@drawable/cross_ico"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginLeftRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeConstantTextView"
        />

    <EditText
        android:id="@+id/addressFromEditText"
        style="@style/CustomEditText."
        android:layout_width="0dp"
        android:layout_height="@dimen/heightOfSearchEditText"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginLeftRight"
        android:layout_marginRight="@dimen/marginLeftRight"
        android:background="@drawable/rounded_edittext"
        android:textSize="18dp"
        android:text="@string/myLocation"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/cancelRouteImageButton"
        app:layout_constraintTop_toBottomOf="@+id/routeConstantTextView"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/addressToEditText"
        style="@style/CustomEditText."
        android:layout_width="0dp"
        android:layout_height="@dimen/heightOfSearchEditText"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginLeftRight"
        android:layout_marginRight="@dimen/marginLeftRight"
        android:background="@drawable/rounded_edittext"
        android:textSize="18dp"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressFromEditText"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/goButton"
        style="@style/CustomActionButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/heightOfSearchEditText"
        android:layout_marginTop="@dimen/marginTop"
        app:layout_constraintWidth_percent="0.5"
        android:background="@drawable/rounded_button"
        android:text="@string/go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressToEditText"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>